Added all chapters (except 'Syntax Index'). A bit of refactoring needed.

--- a/standard.tex
+++ b/standard.tex
@@ -136,6 +136,7 @@
     \blankpage
     \chapter{Nightly Rust}
     \label{sec:nightly_rust}
+    \input{src/nightly_rust.tex}
     
     \blankpage
     \chapter{Glossary}
